--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,9 @@
 # higher-level prios
 
 - back on 'machine-up' probe type:
-  - bootstrap.js: update 'isup/devzone' probe if for wrong machine (if
-    the machine devzone has been re-created)
-  - using the agentProbesMD5 cache?
+  - agent: could not create probe (skipping) -> TICKET
+    - keeps retrying everytime. That is pointless and unneeded noise in
+      the docs. Want to not retry if nothing has changed.
   - runInGlobal relay save changes below
 - script for a demo: Let's do Use Case "2. Operator SDC Zones monitor".
   - show quick way to setup 'machine-up' probe for each smartdc_role zone
