--- a/TODO.txt
+++ b/TODO.txt
@@ -79,6 +79,10 @@
   is a pain.
 - 'sdc-amon /pub/hamish/monitors/whistle -X DELETE' fails
     ERROR: Error deleting 'amonmonitor=whistle, uuid=7b23ae63-37c9-420e-bb88-8d4bf5e30455, ou=customers, o=smartdc' from UFDS: NotAllowedOnNonLeafError:...
+- What if a whole CN goes down? Could have heartbeats from the relays. Then
+  have a probetype that fires for "missing" data. I.e. missed a heartbeat
+  from the relay. Should this "fire on missing data" be a generic probe
+  config thing? Probably.
 - <probe>.idObject details on probe events from agent is *wrong*. Insecure.
   The userUuid value must come from relay (and should be the zone owner-uuid
   cfg var). Relay should probably also add the "zone" from which the event
